Remove transient pipeline data